# CityBuilder

./: .gitignore  CMakeLists.txt  README.md  main.cpp  visualization.natvis
driver/: Driver.h  MacOS.mm  main.cpp
include/CityBuilder/: Camera.h  Common.h  Events.h  Game.h  Input.h
include/CityBuilder/Building/: Lane.h  LaneDef.h  Profile.h  Road.h  RoadDef.h
include/CityBuilder/Geometry/: Bounds2.h  Internal.h  Mesh.h  Path2.h  Profile.h  RadiusPath2.h  Ray3.h  SharedMesh.h
include/CityBuilder/Rendering/: Camera.h  ColorMesh.h  DistanceLight.h  DynamicMesh.h  Material.h  Mesh.h  Object.h  OrbitalCamera.h  Program.h  Resource.h  Texture.h  UIMesh.h  Uniforms.h
include/CityBuilder/Roads/: Connection.h  Intersection.h  LaneDef.h  Road.h  RoadDef.h  RoadNetwork.h
include/CityBuilder/Storage/: BSTree.h  BSTree.ipp  Check.h  Event.h  Exceptions.h  Hash.h  List.h  Map.h  Optional.h  Ref.h  Stack.h  String.h
include/CityBuilder/Tools/: Markup.h  Markup.ipp
include/CityBuilder/UI/: Element.h  Icon.h  List.h  Node.h  System.h
include/CityBuilder/UI/Primitive/: Character.h  Node.h  Rectangle.h  Rounded.h
include/CityBuilder/Units/: Angle.h
include/CityBuilder/Zones/: ZoneDef.h
models/cars/: ambulance.mtl  bus.mtl  firetruck.mtl  hatchback.mtl  monster_truck.mtl  muscle_1.mtl  muscle_2.mtl  pickup.mtl  police_sports.mtl  police_suv.mtl  roadster.mtl  sedan.mtl  sports.mtl  suv.mtl  taxi.mtl  truck.mtl  truck_trailer.mtl  van.mtl
roads/: highway.road  roadway.lane  sidewalk.lane  single.road
shaders/: fragment.sc  hover.fragment.sc  hover.vertex.sc  ui.fragment.sc  ui.vertex.sc  varying.def.sc  vertex.sc  zone.fragment.sc  zone.vertex.sc
source/: Camera.cpp  Events.cpp  Game.cpp  Input.cpp
source/Building/: ConfigurationParser.cpp  Lane.cpp  LaneDef.cpp  Profile.cpp  Road.cpp  RoadDef.cpp
source/Game/: RoadBuilding.ipp  Zoning.ipp
source/Geometry/: Internal.cpp  Intersection Table.ipp  Mesh.cpp  Path2.cpp  Profile.cpp  RadiusPath2.cpp  Ray3.cpp  SharedMesh.cpp
source/Rendering/: Camera.cpp  ColorMesh.cpp  DynamicMesh.cpp  Mesh.cpp  Object.cpp  OrbitalCamera.cpp  Program.cpp  Texture.cpp  UIMesh.cpp  Uniforms.cpp
source/Roads/: Intersection.cpp  LaneDef.cpp  Road.cpp  RoadDef.cpp  RoadNetwork.cpp
source/Storage/: Check.cpp  String.cpp
source/Tools/: Markup.cpp
source/UI/: Element.cpp  Icon.cpp  List.cpp  Node.cpp  System.cpp
source/UI/Primitive/: Character.cpp  Node.cpp  Rectangle.cpp  Rounded.cpp
source/Zones/: ZoneDef.cpp
tests/Storage/: List.cpp
tools/meta2mtl/: package.json  tsconfig.json
tools/meta2mtl/src/: index.ts
zones/: commercial.zone  industrial.zone  residential.zone
